# Haskell-Instant-Runoff-Voting

./: README.md  irv_voting  irv_voting.hi  irv_voting.hs  test.txt
Alternative Vote.hsproj/: .uuid
Alternative Vote.hsproj/Alternative Vote/: AlternativeVote.cabal  Main.hs  _Main.hsplay
