name: AlternativeVote
version: 1.0
cabal-version: 1.22
build-type: Simple
license: AllRightsReserved
stability: experimental
author: Jozef Stodulski
x-ghc-framework-version: 8.0.2-9.6-1
x-last-ide-version: HfM1.6.0

executable AlternativeVote
    main-is: Main.hs
    build-depends:
        base -any,
        random -any
    default-language: Haskell2010

